--- a/nxp/README
+++ b/nxp/README
@@ -676,12 +676,15 @@ compilation.
     Step 2: While compiling DPDK, pass EXTRA_CFLAGS="-I/path/to/headers" and
             EXTRA_LDFLAGS="-L/path/to/compiled/libraries". Similar to:
 
-    make T=arm64-dpaa2-linuxapp-gcc install EXTRA_CFLAGS="-I./path/libpcap/include" EXTRA_LDFLAGS="-L./path/libpca/lib"
+    make T=arm64-dpaa2-linuxapp-gcc install EXTRA_CFLAGS="-I/path/libpcap/include" EXTRA_LDFLAGS="-L/path/libpca/lib" CONFIG_RTE_KNI_KMOD=n CONFIG_RTE_EAL_IGB_UIO=n -j 4
 
     'dpdk-pdump'` would be available in the <T>/app folder along with 'testpmd'
     and other inbuilt DPDK apps.
 
 Executing 'dpdk-pdump':
+    Pre-condition: disable ASLR:
+
+    $ echo 0 > /proc/sys/kernel/randomize_va_space
 
     Note: As of now only testpmd application supports dpdk-pdump;
 
